force-app/main/default/objects/KB_Article_Assessment__c/KB_Article_Assessment__c.object-meta.xml
<CustomObject>
    <description>Individual article assessment scores and reasoning</description>
    <label>KB Article Assessment</label>
    <nameField>
        <displayFormat>ASSESS-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Article Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>