force-app/main/default/objects/KB_Article_Assessment__c/fields/Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Article_Number__c</fullName>
    <description>Knowledge article number for easy reference and cross-linking.</description>
    <externalId>true</externalId>
    <inlineHelpText>Article Number from the Knowledge Article.</inlineHelpText>
    <label>Article Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>