force-app/main/default/objects/KB_Article_Assessment__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <description>Title of the Knowledge Article at time of assessment</description>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>