force-app/main/default/objects/KB_Article_Assessment__c/fields/Assessment_Run__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Run__c</fullName>
    <description>Parent assessment run</description>
    <label>Assessment Run</label>
    <referenceTo>KB_Assessment_Run__c</referenceTo>
    <relationshipLabel>Article Assessments</relationshipLabel>
    <relationshipName>Article_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>