force-app/main/default/objects/KB_Article_Assessment__c/fields/Conflict_Details__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Details__c</fullName>
    <description>Details about potentially conflicting articles</description>
    <label>Conflict Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>