force-app/main/default/objects/KB_Article_Assessment__c/fields/Days_Since_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Modified__c</fullName>
    <description>Formula: Number of days between Last Modified Date and now.</description>
    <formula>IF(ISBLANK(Last_Modified_Date__c), NULL, NOW() - Last_Modified_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since article was last modified.</inlineHelpText>
    <label>Days Since Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>