force-app/main/default/objects/KB_Article_Assessment__c/fields/Has_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Has_Conflicts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating potential duplicate or conflicting articles detected</description>
    <label>Has Conflicts</label>
    <type>Checkbox</type>
</CustomField>