force-app/main/default/objects/KB_Article_Assessment__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>KB Article Assessments</relationshipLabel>
    <relationshipName>KB_Article_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>