force-app/main/default/objects/KB_Article_Assessment__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>Canonical KnowledgeArticleId (kA0...) for this assessed article. Distinct from Knowledge__c which holds the KnowledgeArticleVersion Id.</description>
    <label>Knowledge Article Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>