force-app/main/default/objects/KB_Article_Assessment__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Snapshot of the article&apos;s LastModifiedDate at the time of assessment.</description>
    <inlineHelpText>When the article was last modified (snapshot).</inlineHelpText>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>