force-app/main/default/objects/KB_Article_Assessment__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Weighted overall score (0-100)</description>
    <label>Overall Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>