force-app/main/default/objects/KB_Article_Assessment__c/fields/Pipeline_Skip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Skip_Reason__c</fullName>
    <description>Populated by KBAssessmentPipelineDispatcher when an article is excluded from the dedup pipeline because one of its quality-gate dimension scores (Completeness, Structure, Clarity) is below the configured threshold. Empty when the article passed the gate.</description>
    <label>Pipeline Skip Reason</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>