force-app/main/default/objects/KB_Article_Assessment__c/fields/Readiness_Status__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Status__c</fullName>
    <description>Readiness classification based on overall score</description>
    <label>Readiness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Needs Work</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>