force-app/main/default/objects/KB_Article_Assessment__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>Formula: Risk level based on Overall Score thresholds.</description>
    <formula>IF(Overall_Score__c &gt;= 70, &quot;Low&quot;,
IF(Overall_Score__c &gt;= 40, &quot;Medium&quot;,
&quot;High&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Risk level: Low (70+), Medium (40-69), High (&lt;40).</inlineHelpText>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>