force-app/main/default/objects/KB_Article_Assessment__c/fields/Word_Count__c.field-meta.xml
<CustomField>
    <fullName>Word_Count__c</fullName>
    <description>Word count of the article body content.</description>
    <inlineHelpText>Total words in article body.</inlineHelpText>
    <label>Word Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>